# AlgoTrading-LLM-Trading

./: README.md  pyproject.toml
cli/: main.py
cli/static/: welcome.txt
tradingAgents/: default_config.py
tradingAgents/agents/: __init__.py
tradingAgents/agents/analysts/: fundamentals_analyst.py  market_analyst.py
tradingAgents/agents/utils/: agent_utils.py
tradingAgents/dataflows/: __init__.py  config.py  interface.py  stockstats_utils.py
tradingAgents/graph/: conditional_logic.py  propagation.py  setup.py  trading_graph.py
