[project]
name = "algotrading-llm-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "finnhub-python>=2.4.25",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.33",
    "pandas>=2.3.3",
]
